Fixed header with bg on mobile

--- a/app/css/main.less
+++ b/app/css/main.less
@@ -297,6 +297,13 @@ footer {
 	.body-text {
 		margin: 0px 60px;
 	}
+	
+	#header {
+		position: absolute;
+	}
+	#header #header-container img {
+	    max-height: 26px;
+	}
 
 	#video {
 		height: auto;
@@ -326,6 +333,23 @@ footer {
 
 	#presidentMobileContainer {
 		margin-top: 0px;
+	}
+
+	.presidentMobileContainer-fixed {
+		position: fixed;
+		top: 0px;
+		left: 0px;
+		width: 100vw;
+	}
+
+	#sponsorMobileContainer {
+		background-image: url("images/mobile/MobileHeader.jpg");
+		height: 41px;
+		text-align: center;
+		padding-top: 5px;
+		img {
+			height: 30px;
+		}
 	}
 
 	/*.parallax, #topimg, #bottomimg {
